# mle-agent

./: .gitignore  Makefile  README.md  agent.py  environment.yml  pyproject.toml  requirements.txt  vscode_demo.ipynb
.elasticbeanstalk/: config.yml
.github/workflows/: apprunner.yml  deploy.yml  test.yml
api/: Dockerfile  FEATURES.md  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  startup.sh
api/mle_agent/: config.py  main.py
api/mle_agent/api/: __init__.py
api/mle_agent/helpers/: logger.py  notebook.py
api/mle_agent/libs/: openai.py
api/mle_agent/models/: __init__.py
api/mle_agent/models/copilot/: __init__.py  copilot.py  types.py
api/mle_agent/models/copilot/scripts/: code_parser.py
api/mle_agent/models/llm/: llm.py  types.py
api/tests/: test_main.py
mle_agent/: jupyter_demo.ipynb  main.py
mle_agent/models/: llm.py
