[tool.poetry]
name = "mle-agent"
version = "0.0.1"
description = "A machine learning agent that can perform the duties of a Machine Learning Engineer"
authors = ["Steven John <steven@hexo.ai>", "Vignesh Baskaran <vignesh@hexo.ai>"]
readme = "README.md"
packages = [{include = "mle_agent"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "0.28.1"
python-dotenv = "1.0.0"
ipylab = "1.0.0"
ipytree = "0.2.2"
ipywidgets = "8.1.1"
ipynbname = "2023.2.0.0"
beautifulsoup4 = "4.12.2"
nbconvert = "7.9.2"
nbformat = "5.9.2"
jupyterlab = "4.0.6"
ipykernel = "6.25.2"
fastapi = {extras = ["all"], version = "^0.104.0"}
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
structlog = "^23.2.0"
rich = "^13.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
