[tool.poetry]
name = "mle-agent"
version = "0.0.1"
description = "A machine learning agent that can perform the duties of a Machine Learning Engineer"
authors = ["Steven John <steven@hexo.ai>", "Vignesh Baskaran <vignesh@hexo.ai>"]
readme = "README.md"
packages = [{include = "mle_agent"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openai = "0.28.1"
fastapi = {extras = ["all"], version = "^0.104.0"}
pydantic = "^2.4.2"
uvicorn = {extras=["standard"], version="^0.23.2"}
pydantic-settings = "^2.0.3"
structlog = "^23.2.0"
rich = "^13.6.0"
httpx = "^0.25.0"
gunicorn = "^21.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
